# haskell-synthesizer

./: Music.hs  Sound.hs  SoundIO.hs  SoundTest.hs  haskell.md  hp  readme.md  synth.cabal  synthesizer.hs  websynth.hs
slides/: slides.css  slides.html  slides.md
