Name:                 synth
Version:              2012.2
Build-type:           Simple
Synopsis:             A tour of haskell in the form of a crude music synthesizer
Description:
    
    A simple synthesizer, capable of outputting raw sounds synthesized from notes and chords.
    This project has been built for demonstrating some features of the Haskell language and
    platform.

License:              LGPL
License-file:         LICENSE
Author:               Arnaud Bailly
Maintainer:           Arnaud Bailly <arnaud.oqube@gmail.com>
Build-Depends:        base
Cabal-version:        >= 1.2
category:             Tutorial
homepage:             https://github.com/abailly/haskell-vs-scala
data-files:           readme.md

Executable synthesizer
  build-depends:      base > 4 && <= 99
                    , data-default
                    , utf8-string
                    , miku >= 2012.1.19
                    , hack2-contrib
                    , hack2-handler-snap-server
                    , monads-tf
                    , enumerator == 0.4.14
                    , primitive == 0.4.0.1
                    , hashable == 1.1.2.1
                    , zlib-bindings == 0.0.1
                    , vector == 0.9
                    , unordered-containers == 0.1.4.3
                    , unix-compat == 0.2.2.1
                    , case-insensitive == 0.3.0.1
                    , blaze-builder == 0.3.0.1
                    , blaze-builder-enumerator == 0.2.0.2
                    , attoparsec == 0.10.1.0
                    , binary == 0.5.0.2
                    , blaze-html
                    , bytestring
                    , containers == 0.4.0.0
                    , process == 1.0.1.5
                                                            
  hs-source-dirs: .
  main-is:            synthesizer.hs
  other-modules:  
                      Sound
                      Music
                      SoundIO

Executable websynth
  build-depends:      base > 4 && <= 99
                    , data-default
                    , utf8-string
                    , miku >= 2012.1.19
                    , mtl
                    , bytestring
                                                            
  hs-source-dirs: .
  main-is:            websynth.hs
